# App-guru

./: .env.example  README.md  ideas.example.txt  pyproject.toml  requirements.txt
app_guru/: __init__.py  cli.py  extract.py  ledger.py  market_expander.py  reddit_api.py  reddit_fetch.py  reddit_search.py  search.py  trends.py  web_research.py
data/: README.md
tests/: test_cli.py  test_env.py  test_extract.py  test_ledger.py  test_market_expander.py  test_reddit_api.py  test_reddit_fetch.py  test_reddit_search.py  test_search.py  test_trends.py  test_web_research.py
