[project]
name = "app-guru"
version = "0.1.0"
description = "Automated idea-search assistant: Google Trends validation and Reddit pain-point mining."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytrends>=4.9.2",
    "numpy>=1.24",
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.scripts]
app-guru = "app_guru.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app_guru*"]
